add_subdirectory(algo)
add_subdirectory(api)
add_subdirectory(common)
add_subdirectory(device)
add_subdirectory(network)
add_subdirectory(resolver)
add_subdirectory(statistical)
add_subdirectory(stratum)

set(SOURCES_ALGO ${SOURCES_ALGO} PARENT_SCOPE)
set(SOURCES_ALGO_AUTOLYOS ${SOURCES_ALGO_AUTOLYOS} PARENT_SCOPE)
set(SOURCES_ALGO_BLAKE3 ${SOURCES_ALGO_BLAKE3} PARENT_SCOPE)
set(SOURCES_ALGO_CRYPTO ${SOURCES_ALGO_CRYPTO} PARENT_SCOPE)
set(SOURCES_ALGO_CRYPTO_TESTS ${SOURCES_ALGO_CRYPTO_TESTS} PARENT_SCOPE)
set(SOURCES_ALGO_ETHASH ${SOURCES_ALGO_ETHASH} PARENT_SCOPE)
set(SOURCES_ALGO_ETHASH_TESTS ${SOURCES_ALGO_ETHASH_TESTS} PARENT_SCOPE)
set(SOURCES_ALGO_PROGPOW ${SOURCES_ALGO_PROGPOW} PARENT_SCOPE)
set(SOURCES_ALGO_TESTS ${SOURCES_ALGO_TESTS} PARENT_SCOPE)
set(SOURCES_API ${SOURCES_API} PARENT_SCOPE)
set(SOURCES_COMMON ${SOURCES_COMMON} PARENT_SCOPE)
set(SOURCES_COMMON_ERROR ${SOURCES_COMMON_ERROR} PARENT_SCOPE)
set(SOURCES_COMMON_LOG ${SOURCES_COMMON_LOG} PARENT_SCOPE)
set(SOURCES_COMMON_MOCKER ${SOURCES_COMMON_MOCKER} PARENT_SCOPE)
set(SOURCES_DEVICE ${SOURCES_DEVICE} PARENT_SCOPE)
set(SOURCES_NETWORK ${SOURCES_NETWORK} PARENT_SCOPE)
set(SOURCES_RESOLVER ${SOURCES_RESOLVER} PARENT_SCOPE)
set(SOURCES_RESOLVER_AMD ${SOURCES_RESOLVER_AMD} PARENT_SCOPE)
set(SOURCES_RESOLVER_AMD_TESTS ${SOURCES_RESOLVER_AMD_TESTS} PARENT_SCOPE)
set(SOURCES_RESOLVER_NVIDIA ${SOURCES_RESOLVER_NVIDIA} PARENT_SCOPE)
set(SOURCES_RESOLVER_NVIDIA_TESTS ${SOURCES_RESOLVER_NVIDIA_TESTS} PARENT_SCOPE)
set(SOURCES_STRATISTICAL ${SOURCES_STRATISTICAL} PARENT_SCOPE)
set(SOURCES_STRATUM ${SOURCES_STRATUM} PARENT_SCOPE)
