file(GLOB HEADERS "*.hpp")
file(GLOB SOURCES "*.cpp")

target_sources(${MINER_EXE} PUBLIC
${HEADERS}
${SOURCES}
)

target_sources(${UNIT_TEST_EXE} PUBLIC
${HEADERS}
${SOURCES}
)


if (BUILD_AMD)
    add_subdirectory(amd)
endif()
if (BUILD_NVIDIA)
    add_subdirectory(nvidia)
endif()

set(SOURCES_RESOLVER ${HEADERS} ${SOURCES} PARENT_SCOPE)
set(SOURCES_RESOLVER_AMD ${SOURCES_RESOLVER_AMD} PARENT_SCOPE)
set(SOURCES_RESOLVER_AMD_TESTS ${SOURCES_RESOLVER_AMD_TESTS} PARENT_SCOPE)
set(SOURCES_RESOLVER_NVIDIA ${SOURCES_RESOLVER_NVIDIA} PARENT_SCOPE)
set(SOURCES_RESOLVER_NVIDIA_TESTS ${SOURCES_RESOLVER_NVIDIA_TESTS} PARENT_SCOPE)
