file(GLOB HEADERS "*.hpp")
file(GLOB SOURCES "*.cpp")

if (BUILD_EXE_MINER)
    target_sources(${MINER_EXE} PUBLIC
        ${HEADERS}
        ${SOURCES}
    )
endif()

if (BUILD_EXE_UNIT_TEST)
    target_sources(${UNIT_TEST_EXE} PUBLIC
        ${HEADERS}
        ${SOURCES}
    )
endif()


if (BUILD_AMD)
    add_subdirectory(amd)
endif()
if (BUILD_CPU)
    add_subdirectory(cpu)
endif()
if (BUILD_NVIDIA)
    add_subdirectory(nvidia)
endif()

set(SOURCES_RESOLVER ${HEADERS} ${SOURCES} PARENT_SCOPE)
set(SOURCES_RESOLVER_AMD ${SOURCES_RESOLVER_AMD} PARENT_SCOPE)
set(SOURCES_RESOLVER_AMD_TESTS ${SOURCES_RESOLVER_AMD_TESTS} PARENT_SCOPE)
set(SOURCES_RESOLVER_CPU ${SOURCES_RESOLVER_CPU} PARENT_SCOPE)
set(SOURCES_RESOLVER_CPU_TESTS ${SOURCES_RESOLVER_CPU_TESTS} PARENT_SCOPE)
set(SOURCES_RESOLVER_NVIDIA ${SOURCES_RESOLVER_NVIDIA} PARENT_SCOPE)
set(SOURCES_RESOLVER_NVIDIA_TESTS ${SOURCES_RESOLVER_NVIDIA_TESTS} PARENT_SCOPE)
