file(GLOB HEADERS "*.hpp")
file(GLOB SOURCES "*.cpp")

target_sources(${MINER_EXE} PUBLIC
${HEADERS}
${SOURCES}
)

target_sources(${UNIT_TEST_EXE} PUBLIC
${HEADERS}
${SOURCES}
)

add_subdirectory(tests)

set(SOURCES_RESOLVER_AMD ${HEADERS} ${SOURCES} PARENT_SCOPE)
set(SOURCES_RESOLVER_AMD_TESTS ${SOURCES_RESOLVER_AMD_TESTS} PARENT_SCOPE)
