file(GLOB HEADERS "*.hpp")
file(GLOB SOURCES "*.cpp")

target_sources(${MINER_EXE} PUBLIC
${HEADERS}
${SOURCES}
)

target_sources(${UNIT_TEST_EXE} PUBLIC
${HEADERS}
${SOURCES}
)

add_subdirectory(tests)

set(SOURCES_RESOLVER_NVIDIA ${HEADERS} ${SOURCES} PARENT_SCOPE)
set(SOURCES_RESOLVER_NVIDIA_TESTS ${SOURCES_RESOLVER_NVIDIA_TESTS} PARENT_SCOPE)
